# calamanCy

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  i-m-a-calamancy-user-.md
.github/workflows/: pages.yml  publish.yml  test.yml
benchmarks/: README.md  project.yml
benchmarks/configs/: baseline.cfg  fasttext.cfg
benchmarks/scripts/: convert_to_jsonlines.py  run_experiment.py
calamancy/: __init__.py  inference.py  loaders.py
calamancy/tests/: test_inference.py  test_loaders.py
dataset/tl_wikitext39_silver/: README.md  project.yml
dataset/tl_wikitext_silver/: README.md  project.yml  requirements.txt
datasets/tl_calamancy_gold_corpus/: README.md  project.yml  requirements.txt
datasets/tl_calamancy_gold_corpus/configs/: ner.cfg  ner_trf.cfg  ner_vects.cfg
datasets/tl_calamancy_gold_corpus/configs/sweeps/: ner_chars_sweep.cfg  sweep.yml
datasets/tl_calamancy_gold_corpus/guidelines/: README.md
datasets/tl_calamancy_gold_corpus/scripts/: benchmark.py  collate_results.py  count_entities.py  generate_unseen.py  prepare_raw_text.py  preprocess.py  run_benchmarks.sh  wandb_sweep.py
datasets/tl_calamancy_silver_corpus/: README.md  project.yml
datasets/tl_calamancy_silver_corpus/scripts/: annotate.py  collate_results.py  download_wikiann.py  process_tlunified.py
datasets/tl_tlunified_silver/: README.md  project.yml  requirements.txt
datasets/tl_tlunified_silver/configs/: default.cfg
datasets/tl_tlunified_silver/scripts/: download_datasets.py  download_wikiann.py  process_tlunified.py
datasets/tl_wikitext_silver/: project.yml
datasets/tl_wikitext_silver/scripts/: download_datasets.py
experiments/: README.md  requirements.txt  update_table.py
experiments/multilingual_llm_evals/: project.yml
experiments/refresh_evals_0924/: requirements.txt
experiments/tl_calamancy_gold_corpus/: README.md  project.yml  requirements.txt
experiments/tl_calamancy_gold_corpus/configs/: ner_chars.cfg  ner_trf.cfg  ner_vects.cfg
experiments/tl_calamancy_gold_corpus/configs/sweeps/: ner_chars_sweep.cfg  sweep.yml
experiments/tl_calamancy_gold_corpus/guidelines/: README.md
experiments/tl_calamancy_gold_corpus/scripts/: benchmark.py  collate_results.py  count_entities.py  run_benchmarks.sh  wandb_sweep.py
experiments/tl_calamancy_silver_corpus/: README.md  project.yml  requirements.txt
experiments/tl_calamancy_silver_corpus/configs/: default.cfg
experiments/tl_calamancy_silver_corpus/scripts/: annotate.py  download_wikiann.py  process_tlunified.py  utils.py
models/v0.1.0/: README.md  meta.json  project.yml  requirements.txt
models/v0.1.0-gliner/: .gitignore  README.md  evaluate.py  project.yml  requirements.txt  train.py
models/v0.1.0/configs/: assemble.cfg  assemble_trf.cfg  ner.cfg  ner_trf.cfg  parser_tagger_trf.cfg
models/v0.1.0/scripts/: merge_treebanks.py
models/v0.2.0/: .gitignore  README.md  meta.json  project.yml  requirements.txt
models/v0.2.0/configs/: assemble.cfg  assemble_trf.cfg  ner.cfg  ner_trf.cfg  parser.cfg  parser_trf.cfg
models/v0.2.0/evals/tl_calamancy_lg/: dep_newscrawl.json  dep_trg.json  dep_ugnayan.json  ner-tfnerd.json  ner_tfnerd.json  ner_tlunified.json  ner_uner-trg.json  ner_uner-ugnayan.json
models/v0.2.0/evals/tl_calamancy_md/: dep_newscrawl.json  dep_trg.json  dep_ugnayan.json  ner-tfnerd.json  ner_tfnerd.json  ner_tlunified.json  (+2 more)
models/v0.2.0/scripts/: convert.py  report.py  train.sh
paper/: .gitignore  custom.bib  emnlp2023.tex  report.tex
paper/benchmark/: README.md  project.yml  requirements.txt
paper/benchmark/configs/: ner-calamancy-hf.cfg  parser-ud-trf-hf.cfg  parser-ud-trf.cfg  textcat-hatespeech-trf-hf.cfg  textcat-hatespeech-trf.cfg  textcat-hatespeech.cfg  textcat_multilabel-dengue-trf-hf.cfg  textcat_multilabel-dengue-trf.cfg  textcat_multilabel-dengue.cfg
paper/benchmark/scripts/: get_nearest_language.py  kfold.py  merge_treebanks.py  process_dengue.py  process_hatespeech.py  split_treebank.py
paper/images/: iaa.pdf:Zone.Identifier
paper/tables/: benchmark_datasets.tex  dataset_statistics.tex  entity_types.tex  pipelines.tex  results.tex
report/: custom.bib  report.tex
report/benchmark/: project.yml
report/benchmark/scripts/: process_hatespeech.py
report/tables/: iaa.tex  results.tex
reports/: README.md
reports/aacl2023/: README.md  acl2023.sty  acl_natbib.bst  custom.bib  report.tex
reports/aacl2023/benchmark/: README.md  project.yml  requirements.txt
reports/aacl2023/cross_dataset_benchmark/: .gitignore  README.md  project.yml  requirements.txt
reports/aacl2023/tables/: dataset_statistics.tex  entity_types.tex  iaa.tex  results_baseline.tex  results_errors.tex  results_gold.tex  results_llm.tex  results_wikiann.tex
reports/dataset/: .gitignore  custom.bib  report.tex
reports/dataset/benchmark/: README.md  project.yml
reports/dataset/tables/: entity_types.tex
reports/emnlp2023/: README.md  custom.bib  emnlp2023.sty  report.tex
reports/emnlp2023/benchmark/: README.md  project.yml  requirements.txt
reports/emnlp2023/tables/: benchmark_datasets.tex  dataset_statistics.tex  entity_types.tex  iaa.tex  pipelines.tex  results.tex
reports/software/benchmark/: project.yml
website/: .gitignore  config.toml  hugo.yaml
website/content/: _index.markdown  tutorials.md  users.md
website/content/news/: emnlp23.md  gliner.md  release-v010.md  release-v020.md
website/content/tutorials/: right-for-you.md
website/content/users/: _index.md
website/layouts/partials/: header.html
(+36 files in other folders)
