[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calamanCy"
version = "0.1.1"
authors = [
    {name = "Lj V. Miranda", email = "ljvmiranda@gmail.com"}
]
description = "NLP Pipelines for Tagalog"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["nlp", "natural language processing", "language technology", "tagalog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.7"
dependencies = [
    "spacy>=3.5.0",
    "wasabi>=0.9.1",
    "typer>=0.4.2"
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.0.0",
    "ruff>=0.0.272",
    "mypy>=1.0.0",
    "pytest"
]

[project.urls]
"Repository" = "https://github.com/ljvmiranda921/calamanCy"
"Bug Tracker" = "https://github.com/ljvmiranda921/calamanCy/issues"
"Release Notes" = "https://github.com/ljvmiranda921/calamanCy/releases"

[tool.setuptools]
packages = ["calamancy"]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 88

[tool.ruff]
ignore = ["E203", "E266", "E501", "E731", "E741", "F541"]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "Q",    # flake8-quotes
    "T201"  # flake8-print
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
allow_redefinition = true