[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calamanCy"
version = "0.2.2"
authors = [
    {name = "Lj V. Miranda", email = "ljvmiranda@gmail.com"}
]
description = "NLP Pipelines for Tagalog"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["nlp", "natural language processing", "language technology", "tagalog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.7"
dependencies = [
    "spacy>=3.5.0",
    "wasabi>=0.9.1",
    "typer>=0.4.2",
    "spacy-transformers>=1.2.5,<=1.3.5"
]

[project.urls]
"Repository" = "https://github.com/ljvmiranda921/calamanCy"
"Bug Tracker" = "https://github.com/ljvmiranda921/calamanCy/issues"
"Release Notes" = "https://github.com/ljvmiranda921/calamanCy/releases"

[tool.setuptools]
packages = ["calamancy"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 9

[tool.pylint.format]
max-line-length = 88

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"] # line too long (black is taking care of this)
line-length = 88
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
allow_redefinition = true

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "black>=23.1.0",
    "isort>=5.0.0",
    "ruff>=0.0.272",
    "mypy>=1.0.0",
    "pytest"
]
